setup basic UDS and inference loop + M1 accepted

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,8 @@ add_executable(umad
     src/umad/main.cpp
     src/runtime/config.cpp
     src/runtime/model.cpp
+    src/runtime/infer.cpp
+    src/ipc/uds_server.cpp
 )
 
 # --- 5. Link Your Server to the Engine ---
