--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "external/llama.cpp"]
 	path = external/llama.cpp
 	url = https://github.com/ggml-org/llama.cpp.git
+[submodule "external/googletest"]
+	path = external/googletest
+	url = https://github.com/google/googletest.git
