--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,6 +40,8 @@ add_executable(umad
     src/runtime/model.cpp
     src/runtime/tokens.cpp
     src/sched/scheduler.cpp
+    src/sched/sampling.cpp
+    src/sched/bmt.cpp
     src/sched/policy.cpp
     src/metrics/metrics.cpp
     src/ipc/uds_server.cpp
@@ -80,9 +82,13 @@ target_include_directories(uma_cli PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src)
 add_executable(uma_unit_tests
     tests/cpp/test_main.cpp
     tests/cpp/ipc_protocol_test.cpp
+    tests/cpp/bmt_test.cpp
     tests/cpp/policy_test.cpp
+    tests/cpp/sampling_test.cpp
     src/ipc/protocol.cpp
+    src/sched/bmt.cpp
     src/sched/policy.cpp
+    src/sched/sampling.cpp
 )
 target_link_libraries(uma_unit_tests PRIVATE gtest_main)
 target_include_directories(uma_unit_tests PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src)
